--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=6378fe12f88ae4e4c07a43701ed3c6c6
 DATABASE_URL="mysql://root:@127.0.0.1:3306/series?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
